# gifts-sales

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/cli/: approvals.py  auth.py  gifts.py  jobs.py  markets.py
app/client/: telegram.py
app/client/mtproto/: __init__.py  functions.py  serialization.py  types.py
app/config/: settings.py
app/markets/: portals.py
app/models/: approval.py  gift.py  job.py  market.py
app/rules/: loader.py  policy.py
app/schemas/: approval.py  gift.py  job.py  market.py  policy.py  rule.py
app/services/: approval_notifier.py  inventory.py  job_queue.py  listing.py  pricing.py  transfer.py
app/storage/: approval_repo.py  database.py  gift_repo.py  job_repo.py  market_repo.py
app/utils/: logging.py  retry.py
docs/: market-operations-guide.md  markets-research.md  project-checkpoint.md  sales-workflow-notes.md  work-context.md
docs/superpowers/plans/: 2026-05-01-attribute-report.md
docs/superpowers/specs/: 2026-05-01-attribute-report-design.md
rules/: example_rules.yaml  portals_policy.yaml
tests/: conftest.py
tests/integration/: test_inventory.py
tests/unit/: test_approvals.py  test_idempotency.py  test_job_queue.py  test_listing.py  test_market_repo.py  test_policy.py  test_portals_market.py  test_portals_portfolio_report.py  test_pricing.py  test_retry.py  test_rule_filter.py  test_transfer.py
